# QueryWatcher

./: .gitignore  README
src/: App.cpp  CMakeLists.txt  INSTALL  Settings.cpp  Settings.h  Test.cpp  TestSettings.cpp  TestSettings.h  find_home.cpp  main.cpp  makefile
